--- a/src/main/webapp/resources/css/style_copy.css
+++ b/src/main/webapp/resources/css/style_copy.css
@@ -10,7 +10,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Open Sans", sans-serif;
   color: #444444;
 }
 
@@ -30,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Raleway", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -126,7 +126,7 @@ h6 {
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Poppins", sans-serif;
   border-left: 8px solid #e96b56;
 }
 
@@ -174,7 +174,7 @@ h6 {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14px;
   color: #545454;
   white-space: nowrap;
@@ -509,7 +509,7 @@ h6 {
 }
 
 #hero .btn-get-started {
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 1px;
@@ -589,7 +589,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .section-title h2::after {
@@ -864,7 +864,7 @@ section {
 .counts .count-box p {
   padding: 30px 0 0 0;
   margin: 0;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Raleway", sans-serif;
   font-size: 14px;
 }
 
@@ -874,7 +874,7 @@ section {
   margin-top: 20px;
   color: #7a7a7a;
   font-size: 15px;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Poppins", sans-serif;
   transition: ease-in-out 0.3s;
 }
 
@@ -951,7 +951,7 @@ section {
   font-weight: 700;
   font-size: 26px;
   color: #545454;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
 }
 
@@ -987,7 +987,7 @@ section {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Poppins", sans-serif;
   color: #545454;
 }
 
@@ -1256,7 +1256,7 @@ section {
   font-size: 46px;
   color: #e96b56;
   font-weight: 400;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Open Sans", sans-serif;
   margin-bottom: 25px;
 }
 
@@ -1305,7 +1305,7 @@ section {
   transition: none;
   font-size: 14px;
   font-weight: 400;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Raleway", sans-serif;
   transition: 0.3s;
 }
 
@@ -2118,7 +2118,7 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: 'Noto Serif KR', serif;
+  font-family: "Raleway", sans-serif;
   color: #fff;
 }
 
